--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,22 +1,31 @@
-name: React JS CD
-on:
-  push:
-    branches: [main]
+name: Deploy
+ 
+on: [push]
+ 
 jobs:
-  deploy:
+  build:
+ 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
-
+ 
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{secrets.HOST}}
-          username: ${{secrets.USERNAME}}
-          key: ${{secrets.PRIVATE_KEY}}
-          script: |
-            cd /usr/share/nginx/html/devops_shuvo/react-exp
-            git pull
+    - uses: actions/checkout@v1
+ 
+    - name: Copy repository contents via scp
+      uses: appleboy/scp-action@master
+      env:
+        HOST: ${{ secrets.HOST }}
+        USERNAME: ${{ secrets.USERNAME }}
+        PORT: ${{ secrets.PORT }}
+        KEY: ${{ secrets.PRIVATE_KEY }}
+      with:
+        source: "."
+        target: "/usr/share/nginx/html/devops_shuvo/react-exp/"
+ 
+    - name: Executing remote command
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        USERNAME: ${{ secrets.USERNAME }}
+        PORT: ${{ secrets.PORT }}
+        KEY: ${{ secrets.PRIVATE_KEY }}
+        script: ls
